--- a/Config/nginx.conf
+++ b/Config/nginx.conf
@@ -20,8 +20,8 @@ http {
     # Nginx Bad Bot Blocker Includes
     # REPO: https://github.com/mitchellkrogza/nginx-ultimate-bad-bot-blocker
     ##
-	include /etc/nginx/conf.d/botblocker-nginx-settings.conf; 
- 	include /etc/nginx/conf.d/globalblacklist.conf;
+	#include /etc/nginx/conf.d/botblocker-nginx-settings.conf; 
+ 	#include /etc/nginx/conf.d/globalblacklist.conf;
  
 map $remote_addr $ip_anonym1 {
 default 0.0.0;
@@ -57,7 +57,7 @@ log_format anonymized '$ip_anonymized - $remote_user [$time_local] '
     limit_conn_zone $binary_remote_addr zone=addr:50m;
 
     access_log off;
-	  include /etc/nginx/nginx.conf.d/*.conf;
+    include /etc/nginx/nginx.conf.d/*.conf;
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     include /etc/nginx/sites-enabled/*;
